# rust-api-gateway

./: README.md
client/: Cargo.toml
client/src/: main.rs
helloservice/: Cargo.toml
helloservice/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
