[package]
name = "apigateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.24", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = "1.0"
hyper-tls = "0.5"
serde_json = "1.0"
jsonwebtoken = "7.2"
log = "0.4"
consul = "0.4.2"
